# comfyui-types

./: .gitignore  Makefile  README.md  pyproject.toml
conda-recipe/: meta.yaml
docs/: README.md  input_types.md
examples/: README.md  example_1.md  example_1_basic.py  example_2.md  example_3.md
src/comfyui_types/: __init__.py  __init__.pyi  export.py  node.py
src/comfyui_types/inputs/: __init__.py  base.py  boolean.py  builtin.py  choice.py  float.py  integer.py  string.py
src/comfyui_types/outputs/: __init__.py  base.py  basic.py  builtin.py
